# cardano-wasm-libs

./: .gitignore  .gitmodules  .prettierignore  LICENSE  LICENSE-DCSPARK  LICENSE-EMURGO  README.md  package.json
rust/untyped-plutus-core/: Cargo.toml
rust/untyped-plutus-core/src/: lib.rs
scripts/: cml-build.sh  cml-update.sh  msl-build.sh  msl-update.sh  rust-build.sh  uplc-build.sh
src/: browser.d.ts  browser.js  browser.ts  nodejs.d.ts  nodejs.js  web.d.ts  web.js
src/libs/cardano-multiplatform-lib/browser/: cardano_multiplatform_lib.js  cardano_multiplatform_lib_bg.js  package.json
src/libs/cardano-multiplatform-lib/nodejs/: cardano_multiplatform_lib.d.ts  cardano_multiplatform_lib.js  cardano_multiplatform_lib_bg.wasm  cardano_multiplatform_lib_bg.wasm.d.ts  package.json
src/libs/cardano-multiplatform-lib/web/: cardano_multiplatform_lib.d.ts  cardano_multiplatform_lib.js  cardano_multiplatform_lib_bg.wasm  package.json
src/libs/message-signing-lib/browser/: cardano_message_signing.d.ts  cardano_message_signing_bg.js  package.json
src/libs/message-signing-lib/nodejs/: cardano_message_signing.d.ts  cardano_message_signing.js  cardano_message_signing_bg.wasm  cardano_message_signing_bg.wasm.d.ts  package.json
src/libs/message-signing-lib/web/: cardano_message_signing.d.ts  cardano_message_signing.js  cardano_message_signing_bg.wasm  package.json
src/libs/untyped-plutus-core/browser/: package.json  uplc_wasm.js
src/libs/untyped-plutus-core/nodejs/: package.json  uplc_wasm.js  uplc_wasm_bg.wasm
src/libs/untyped-plutus-core/web/: package.json  (+3 more)
